# EzTrIP

./: README.md  pyproject.toml
src/eztrip/: attention.py  energy_corrector.py  feed_forward.py  frames.py  main.py  multi_head_attention.py  train_model.py  transformer.py
src/eztrip/archs/: attention.py  multi_head_attention.py  transformer.py
tests/: test_ase_read.py  test_attention.py  test_config_yaml.py  test_feed_forward.py  test_multi_head_attention.py  test_transformer.py
tests/test_inputs/: config-train.yaml
