[project]
name = "eztrip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ase",
    "matscipy",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "torch==2.6.0",
    "torch-geometric",
]

[tool.uv]
package = true
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[project.scripts]
eztrip = "eztrip.main:main"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'"},
  { index = "PyPI", marker = "sys_platform != 'linux'"}
]

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
